@@ -5,9 +5,9 @@ CATALOGS = @MOFILES@
 CLEANFILES = $(CATALOGS) WindowMaker.pot
 
 # keep this sorted
-EXTRA_DIST = bg.po cs.po da.po de.po el.po es.po et.po fi.po fr.po gl.po \
+EXTRA_DIST = be.po bg.po cs.po da.po de.po el.po es.po et.po fi.po fr.po gl.po \
 	hr.po hu.po it.po ja.po ko.po ms.po nl.po no.po pl.po pt.po ro.po \
-	ru.po sk.po sv.po tr.po zh_CN.po zh_TW.Big5.po be.po
+	ru.po sk.po sv.po tr.po zh_CN.po zh_TW.Big5.po
 
 POTFILES  = \
 	$(top_builddir)/src/appicon.c \
